Bug 259740 - Device Notifier does not unmount CIFS shares, displays unmounted shares as mounted, gives no feedback if mounting fails
Summary: Device Notifier does not unmount CIFS shares, displays unmounted shares as mo...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-devicenotifier (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-13 16:10 UTC by AE
Modified: 2011-01-04 11:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments
patch against trunk/branch 4.6 (4.56 KB, patch)
2011-01-04 00:03 UTC, Jacopo De Simoi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description AE 2010-12-13 16:10:54 UTC
Version:           unspecified (using KDE 4.5.85) 
OS:                Linux

Hi! In my fstab I have four CIFS shares, marked as 'noauto'. They are displayed in the device notifier widget's list under 'Storage Access'. In terminal, I can mount and unmount as normal user using /bin/mount, /bin/umount.
With device notifier, there are several small problems:

1) If mount.cifs is not set suid-root, mounting as non-root user fails, with command line as well as with device notifier. With device notifier, there is no feedback after a failed mount.

2) I can mount them correctly with device notifier and dolphin opens the volume's root. However, I cannot unmount using device notifier. Unmounting in dolphin works.

3) Once one of the shares is mounted, all four are marked as mounted in device notifier. Again, dolphin displays correctly.

Reproducible: Always
Comment 1 AE 2010-12-23 16:34:02 UTC
Problem persists with version 4.5.90.
Comment 2 Jacopo De Simoi 2010-12-25 12:39:50 UTC
I'll try to reproduce your setup; I have no CIFS shares so it's quite possible that they require some special attention… stay tuned
Comment 3 AE 2010-12-25 16:54:25 UTC
If you need additional info or have a patch to try against RC1, just say the word... Cheers!
Comment 4 Jacopo De Simoi 2011-01-03 16:22:32 UTC
SVN commit 1211298 by jacopods:

Treat remote NFS/CIFS shares as non-removable devices
This is just a hack valid for the 4.6 timeframe, and should *not* be forwardported
to trunk. 

CCBUG: 259345
CCBUG: 259740 


 M  +6 -0      devicenotifier.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211298
Comment 5 Jacopo De Simoi 2011-01-03 16:25:30 UTC
Ok, confirmed. The issue is actually in solid-fstab; I'll get in contact with the mantainer soon to fix it. Stay tuned
Comment 6 Jacopo De Simoi 2011-01-03 17:48:27 UTC
SVN commit 1211311 by jacopods:

Allow virtual devices (i.e. nfs/cifs shares) to raise notifications

CCBUG: 259740


 M  +0 -3      ksolidnotify.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211311
Comment 7 Jacopo De Simoi 2011-01-03 23:33:49 UTC
SVN commit 1211373 by jacopods:

Reduce the number of accessibilityChanged signals emitted; now each storageaccess emits its own signal if needed. 

CCBUG: 259740


 M  +4 -8      fstabstorageaccess.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211373
Comment 8 Jacopo De Simoi 2011-01-03 23:50:50 UTC
SVN commit 1211376 by jacopods:

Make sure unmounting works on virtual devices such as CIFS/NFS shares

CCBUG: 259740


 M  +1 -1      notifierdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211376
Comment 9 Jacopo De Simoi 2011-01-04 00:03:13 UTC
Created attachment 55541 [details]
patch against trunk/branch 4.6
Comment 10 Jacopo De Simoi 2011-01-04 00:05:25 UTC
Ok, now we just need to wait for the approval of the patch :)
Comment 11 Mario Bensi 2011-01-04 08:47:13 UTC
it's ok for me, you can ship it.

Thanks for this patch and your last commit on fstabstorageaccess.cpp
Comment 12 Jacopo De Simoi 2011-01-04 11:16:04 UTC
SVN commit 1211499 by jacopods:

Do the "dbus dance":

all signals such as {setup,teardown}{requested,done} must be routed via the appropriate
dbus interface in order to have them broadcasted to all instances of the same device;
this ensures that mount/unmount notifications work correctly.

BUG: 259740


 M  +41 -6     fstabstorageaccess.cpp  
 M  +7 -0      fstabstorageaccess.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211499