Do the "dbus dance":

all signals such as {setup,teardown}{requested,done} must be routed via the appropriate
dbus interface in order to have them broadcasted to all instances of the same device;
this ensures that mount/unmount notifications work correctly.

BUG: 259740

svn path=/branches/KDE/4.6/kdelibs/; revision=1211499